<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/name_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_user"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            app:counterMaxLength="8">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_registration"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group_funtion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_function_mk"
                android:text="@string/txt_radio_mk"
                android:checked="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_function_au"
                android:text="@string/txt_radio_au"
                android:checked="false"/>

        </RadioGroup>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="8" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_c_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/c_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_c_password"
                android:inputType="textPassword"
                android:maxLength="8" />

        </android.support.design.widget.TextInputLayout>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/RaisedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginRight="@dimen/marginRight"
            android:text="@string/txt_bt_register" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>