<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login.LoginActivity"
    tools:showIn="@layout/activity_login">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginRight"
        app:counterMaxLength="8">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_registration"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginRight"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="8" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/RaisedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoupassword"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/marginRight"
        android:text="@string/txt_bt_login" />

</LinearLayout>